--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,16 +1,16 @@
 <header>
-  <div class="container border-bottom p-0">
-    <div class="d-flex flex-row">
-      <div class="d-md-flex col-md-2  justify-content-start align-items-center ">
-        <%= link_to image_tag("logo.png", class: "size-logo", alt: t(".framgia_logo")),
-          root_path %>
-      </div>
-      <div class="col-md-8  d-flex justify-content-center align-items-center">
-        <h1 class="text-uppercase"><%= t ".welcome" %></h1>
-      </div>
-      <div class="col-md-2 justify-content-end align-items-center ">
-        <%= link_to t(".sign_in"), "#", class: "btn btn-lg btn-primary" %>
-      </div>
+  <nav class="navbar navbar-expand-md navbar- py-4">
+    <div class="container">
+      <%= link_to image_tag("logo.png", class: "size-logo navbar-brand", alt: t(".framgia_logo")), root_path %>
+      <h3 class="d-inline align-middle">framgia</h3>
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <%= link_to t(".link_home"), root_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to t(".link_log_in"), "#", class: "nav-link" %>
+          </li>
+        </ul>
     </div>
-  </div>
+  </nav>
 </header>
