--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,13 +2,13 @@
   <nav class="navbar navbar-expand-md navbar- py-4">
     <div class="container">
       <%= link_to image_tag("logo.png", class: "size-logo navbar-brand", alt: t(".framgia_logo")), root_path %>
-      <h3 class="d-inline align-middle">framgia</h3>
+      <h3 class="d-inline align-middle"><%= t ".framgia"%></h3>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <%= link_to t(".link_home"), root_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to t(".link_log_in"), "#", class: "nav-link" %>
+            <%= link_to t(".link_log_in"), login_path, class: "nav-link" %>
           </li>
         </ul>
     </div>
