Edit-Delete User

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="bg-primary">
-  <div class="text-white text-center p-3"><%= t ".text_footer" %>
+<footer class="bg-secondary footer">
+  <div class="text-white text-center"><%= t ".text_footer" %>
   </div>
 </footer>
