--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-md navbar- py-4">
+  <nav class="navbar navbar-expand-md">
     <div class="container">
       <%= link_to image_tag("logo.png", class: "size-logo navbar-brand", alt: t(".framgia_logo")), root_path %>
       <h3 class="d-inline align-middle"><%= t ".framgia"%></h3>
