--- a/app/views/layouts/users.html.erb
+++ b/app/views/layouts/users.html.erb
@@ -5,25 +5,64 @@
     <%= render "layouts/rails_default" %>
     <%= render "layouts/shim" %>
   </head>
-  <body>
-    <nav class="navbar navbar-expand-sm navbar-light bg-light mb-3">
+  <body class="top-height">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
           <%= link_to t(".link_home"), "#", class: "navbar-brand" %>
             <ul class="navbar-nav">
-                <li class="nav-item dropdown">
-                  <%= link_to t(".link_account"),"#", class: "nav-link dropdown-toggle", "data-toggle": "dropdown" %>
-                  <div class="dropdown-menu">
-                    <%= link_to t(".link_profile"), current_user, class: "dropdown-item" %>
-                    <%= link_to t(".link_settings"), "#", class: "dropdown-item" %>
-                    <%= link_to t(".link_log_out"), logout_path, method: :delete, class: "dropdown-item" %>
-                  </div>
+                <li class="nav-item">
+                    <%= link_to t(".link_profile"), current_user, class: "nav-link" %>
+                </li>
+                <li class="nav-item">
+                    <%= link_to t(".link_settings"), edit_user_path(current_user), class: "nav-link" %>
+                </li>
+                <li class="nav-item">
+                    <%= link_to t(".link_log_out"), logout_path, method: :delete, class: "nav-link" %>
                 </li>
             </ul>
         </div>
     </nav>
-    <% flash.each do |message_type, message| %>
-      <div class="alert alert-<%= message_type %>"><%= message %></div>
-    <% end %>
-    <%= yield %>
+    
+    <div id="wrapper">
+
+        <!-- Sidebar -->
+        <div id="sidebar-wrapper">
+            <ul class="sidebar-nav">
+                <li class="sidebar-brand">
+                    <%= link_to t(".over_view"), "#" %>
+                </li>
+                <li>
+                    <%= link_to t(".link_courses"), "#" %>
+                </li>
+                <li>
+                    <%= link_to t(".link_subjects"), "#" %>
+                </li>
+                <li>
+                    <%= link_to t(".link_tasks"), "#" %>
+                </li>
+                <li>
+                    <%= link_to t(".link_users"), users_path %>
+                </li>
+            </ul>
+        </div>
+        <!-- /#sidebar-wrapper -->
+
+        <!-- Page Content -->
+        <div id="page-content-wrapper">
+            <div class="container-fluid">
+                <% flash.each do |message_type, message| %>
+                    <div class="alert alert-<%= message_type %>"><%= message %></div>
+                <% end %>
+                <%= link_to t(".show_menu"), "#menu-toggle", class: "btn btn-secondary", id: "menu-toggle" %>
+                <%= yield %>
+            </div>
+        </div>
+        <!-- /#page-content-wrapper -->
+
+    </div>
+    <%= render "layouts/footer" %>
+    <!-- Menu Toggle Script -->
+    <script src="/assets/sidebar.js" type="text/javascript">
+    </script>
   </body>
 </html>
