--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
           <div class="row">
             <div class="col-12 text-center">
               <p><b><%= @user.name %></b></p>
-              <p><%= t "user.day_join", time: format_date(@user.created_at) %></p>
+              <p><%= t ".day_join", time: format_date(@user.created_at) %></p>
             </div>
           </div>
         </div>
