create_edit_subject

--- a/app/views/layouts/users.html.erb
+++ b/app/views/layouts/users.html.erb
@@ -35,7 +35,7 @@
                     <%= link_to t(".link_courses"), "#" %>
                 </li>
                 <li>
-                    <%= link_to t(".link_subjects"), "#" %>
+                    <%= link_to t(".link_subjects"), subjects_path %>
                 </li>
                 <li>
                     <%= link_to t(".link_tasks"), "#" %>
