--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,9 @@
 <% provide :title, t(".index_title") %>
 <h1 class= "text-center"><%= t ".index_title" %></h1>
-<%= link_to t(".create_user"),signup_path, class: "btn btn-primary" %>
+<%= link_to t(".create_user"), signup_path, class: "btn btn-primary" %>
 
-<%= will_paginate(@things, renderer: WillPaginate::ActionView::Bootstrap4LinkRenderer, class: 'justify-content-center mt-5') %>
+<%= will_paginate(@things, renderer: WillPaginate::ActionView::Bootstrap4LinkRenderer, class: "justify-content-center mt-5") %>
 
 <%= render @users %>
 
-<%= will_paginate(@things, renderer: WillPaginate::ActionView::Bootstrap4LinkRenderer, class: 'justify-content-center mb-5') %>
+<%= will_paginate(@things, renderer: WillPaginate::ActionView::Bootstrap4LinkRenderer, class: "justify-content-center mb-5") %>
