--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -5,3 +5,16 @@
 .top-height {
   padding-top: 60px;
 }
+
+.Img-10 {
+  background-image: url("course.png");
+}
+
+.Img-height {
+  height: 150px;
+}
+
+.Img-new {
+  background-size: cover;
+  background-position: center;
+}
