--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -27,7 +27,7 @@
         </div>
         <div class="form-group">
           <%= f.label :phone_number, t(".phone_number") %>
-          <%= f.number_field :phone_number, class:"form-control mt-2", placeholder: t("form.phone_number") %>
+          <%= f.text_field :phone_number, class:"form-control mt-2", placeholder: t("form.phone_number") %>
         </div>
         <div class="form-group">
           <%= f.label :role, t(".select_role") %>
