--- a/app/views/layouts/users.html.erb
+++ b/app/views/layouts/users.html.erb
@@ -32,7 +32,7 @@
                     <%= link_to t(".over_view"), "#" %>
                 </li>
                 <li>
-                    <%= link_to t(".link_courses"), "#" %>
+                    <%= link_to t(".link_courses"), courses_path %>
                 </li>
                 <li>
                     <%= link_to t(".link_subjects"), subjects_path %>
