--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -6,15 +6,15 @@
   padding-top: 60px;
 }
 
-.Img-10 {
+.img-course {
   background-image: url("course.png");
 }
 
-.Img-height {
+.img-height {
   height: 150px;
 }
 
-.Img-new {
+.img-new {
   background-size: cover;
   background-position: center;
 }
