--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -12,7 +12,7 @@
             </div>
           </div>
           <div class="d-flex flex-column">
-            <div class="Img-10 Img-height Img-new"></div>
+            <div class="img-course img-height img-new"></div>
             <h1 class="card-title"><%= course.title %></h1>
             <p class="card-text"><%= course.description %></p>
           </div>
