--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,1 +1,88 @@
-<%= @course.title %>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-12 my-2">
+      <div class="card border rounded bg-light">
+        <div>
+          <%= image_tag("show_course.png", class: "img-thumbnail rounded float-left img-height", alt: t(".img_avatar")) %>
+          <div class="card-body p-0">
+            <h1 class="card-title">
+              <%= @course.title %>
+            </h1>
+            <p class="card-text">
+              <%= @course.description %>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row my-2">
+    <div class="col-12">
+
+      <ul class="nav nav-tabs" id="myTab" role="tablist">
+        <li class="nav-item">
+          <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
+            aria-selected="true"><%= t ".subject" %></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile"
+            aria-selected="false"><%= t ".member" %></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact"
+            aria-selected="false"><%= t ".tasks" %></a>
+        </li>
+      </ul>
+
+      <div class="tab-content pb-3" id="myTabContent">
+
+        <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+          <% @subjects.each do |subject| %>
+          <div class="card border rounded bg-light">
+            <div>
+              <%= image_tag("git.png", class: "img-thumbnail rounded float-left img-height", alt: t(".img_avatar")) %>
+              <div class="card-body p-0">
+                <h1 class="card-title">
+                  <%= subject.title %>
+                </h1>
+                <p class="card-text">
+                  <%= subject.description %>
+                </p>
+                <div class="btn-group">
+                  <%= link_to t(".btn_show_details"), "#", class: "btn btn-info" %>
+                  <%= link_to t(".btn_delete_subject"), "#", class: "btn btn-danger" %>
+                </div>
+              </div>
+            </div>
+          </div>
+          <% end %>
+        </div>
+
+        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+
+          <div class="row">
+            <div class="col-6">
+              <h3>
+                <%= t ".supervisor" %><span class="badge ml-2 text-primary">
+                  <%= @supervisors.size %></span>
+              </h3>
+              <%= render partial: "common/user_of_course", collection: @supervisors, as: :user %>
+            </div>
+            <div class="col-6">
+              <h3>
+                <%= t ".trainee" %><span class="badge ml-2 text-primary">
+                  <%= @trainees.size %></span>
+              </h3>
+              <%= render partial: "common/user_of_course", collection: @trainees, as: :user %>
+            </div>
+          </div>
+          
+        </div>
+
+        <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab"></div>
+
+      </div>
+    </div>
+  </div>
+</div>
