view_details_sub_and_add_tasks

--- a/app/views/subjects/edit.html.erb
+++ b/app/views/subjects/edit.html.erb
@@ -10,7 +10,7 @@
           <%= f.text_field :title, class:" form-control mt-2", placeholder: t("form.title_subject") %>
         </div>
         <div class="form-group">
-          <%= f.label :description, t(".email") %>
+          <%= f.label :description, t(".description") %>
           <%= f.text_area :description, class:"form-control mt-2", placeholder: t("form.description_subject") %>
         </div>
         <div>
