--- a/app/views/layouts/basic_application.html.erb
+++ b/app/views/layouts/basic_application.html.erb
@@ -14,7 +14,7 @@
                     <%= link_to t(".link_profile"), basic_trainee_user_path(current_user), class: "nav-link" %>
                 </li>
                 <li class="nav-item">
-                    <%= link_to t(".link_settings"), edit_basic_trainee_user_path, class: "nav-link" %>
+                    <%= link_to t(".link_settings"), edit_basic_trainee_user_path(current_user), class: "nav-link" %>
                 </li>
                 <li class="nav-item">
                     <%= link_to t(".link_log_out"), logout_path, method: :delete, class: "nav-link" %>
@@ -32,7 +32,7 @@
                     <%= link_to t(".over_view"), "#" %>
                 </li>
                 <li>
-                    <%= link_to t(".link_courses"), "#" %>
+                    <%= link_to t(".link_courses"), basic_trainee_courses_path %>
                 </li>
                 <li>
                     <%= link_to t(".link_subjects"), "#" %>
