--- a/app/views/common/_subject_of_course.html.erb
+++ b/app/views/common/_subject_of_course.html.erb
@@ -1,16 +1,16 @@
-<div class="card border rounded bg-light user-<%= user.id %> ">
+<div class="card border rounded bg-light subject-<%= subject.id %>">
   <div>
-    <%= image_tag("avatar.png", class: "img-thumbnail rounded float-left img-height", alt: t(".img_avatar")) %>
+    <%= image_tag("git.png", class: "img-thumbnail rounded float-left img-height", alt: t(".img_avatar")) %>
     <div class="card-body p-0">
       <h1 class="card-title">
-        <%= user.name %>
+        <%= subject.title %>
       </h1>
       <p class="card-text">
-        <%= user.email %>
+        <%= subject.description %>
       </p>
       <div class="btn-group">
         <%= link_to t(".show_details"), "#", class: "btn btn-info" %>
-        <%= link_to t(".delete_member"), delete_member_courses_path(user_id: user.id, id: @course.id),
+        <%= link_to t(".delete_subject"), delete_subject_courses_path(subject_id: subject.id, id: @course.id),
           method: :delete, data: {confirm: t(".cf_sure")}, remote: true, class: "btn btn-danger" %>
       </div>
     </div>
