--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -39,25 +39,9 @@
       <div class="tab-content pb-3" id="myTabContent">
 
         <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-          <% @subjects.each do |subject| %>
-          <div class="card border rounded bg-light">
-            <div>
-              <%= image_tag("git.png", class: "img-thumbnail rounded float-left img-height", alt: t(".img_avatar")) %>
-              <div class="card-body p-0">
-                <h1 class="card-title">
-                  <%= subject.title %>
-                </h1>
-                <p class="card-text">
-                  <%= subject.description %>
-                </p>
-                <div class="btn-group">
-                  <%= link_to t(".btn_show_details"), "#", class: "btn btn-info" %>
-                  <%= link_to t(".btn_delete_subject"), "#", class: "btn btn-danger" %>
-                </div>
-              </div>
-            </div>
+          <div class="subjects">
+            <%= render partial: "common/subject_of_course", collection: @subjects, as: :subject %>
           </div>
-          <% end %>
         </div>
 
         <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
