--- a/app/views/subjects/_subject.html.erb
+++ b/app/views/subjects/_subject.html.erb
@@ -1,7 +1,7 @@
 <div class="col-6">
   <div class="card-body">
     <h4 class="card-title"><%= subject.title %></h4>
-    <p class="card-text "><%= subject.description %></p>
+    <p class="card-text "><%= truncate(subject.description, length: Settings.limit_description) %></p>
     <div class="btn-group">
       <%= link_to t(".show_subject"), subject, class: "btn btn-info" %>
       <%= link_to t(".edit_subject"), edit_subject_path(subject), class: "btn btn-warning" %>
